Fixing gateway timeout (#208)
* Improve performance with indexes
* Improve performance with Redis cache
* Clear cache in get all functions that contain filter
* Update spring boot version
* Change UUID to String in RefreshTokenRepo

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,3 +74,28 @@ authorize:
 
 firebase:
   serviceAccountKey: ${SERVICE_ACCOUNT_KEY}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,prometheus
+  metrics:
+    tags:
+      application: crochet-application
+  prometheus:
+    metrics:
+      export:
+        enabled: true
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      redisCache:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowType: COUNT_BASED
+        minimumNumberOfCalls: 5
+        waitDurationInOpenState: 60s
+        failureRateThreshold: 50
