--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5'
+    id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.liquibase.gradle' version '2.2.1'
 }
@@ -22,7 +22,12 @@ configurations {
 }
 
 repositories {
+    maven { url 'https://repo.spring.io/milestone' }
     mavenCentral()
+}
+
+ext {
+    set('springCloudVersion', "2024.0.0-RC1")
 }
 
 dependencies {
@@ -31,12 +36,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'org.springframework.security:spring-security-oauth2-client:6.4.0'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation "org.springframework.boot:spring-boot-starter-aop"
     implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0-RC1'
 
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
 
@@ -72,6 +79,12 @@ dependencies {
     liquibaseRuntime 'info.picocli:picocli:4.7.6'
     liquibaseRuntime 'com.mysql:mysql-connector-j:8.4.0'
     liquibaseRuntime 'org.postgresql:postgresql:42.7.3'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 liquibase {
