--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
     multipart:
       max-file-size: 100MB
 
+# Application configuration
 app:
   auth:
     tokenSecret: ${TOKEN_SECRET}
@@ -41,6 +42,7 @@ app:
       - https://littlecrochet.web.app/oauth2/redirect
       - https://littlecrochet.firebaseapp.com/oauth2/redirect
 
+# Authorization configuration
 authorize:
   http-request:
     allowedOrigins: ${ALLOWED_ORIGINS}
@@ -66,11 +68,33 @@ authorize:
       - "/blog-categories/delete/**"
       - "/setting/**"
 
+# Firebase configuration
 firebase:
   serviceAccountKey: ${SERVICE_ACCOUNT_KEY}
 
+# Logging configuration
 logging:
   level:
     org.crochet: DEBUG
     org.springframework.web: DEBUG
     root: INFO
+
+# Resilience4j configuration
+resilience4j:
+  ratelimiter:
+    instances:
+      passwordResetRateLimiter:
+        limitForPeriod: 1
+        limitRefreshPeriod: 3m
+        timeoutDuration: 5s
+      resendEmail:
+        limitForPeriod: 3
+        limitRefreshPeriod: 1h
+        timeoutDuration: 0s
+  retry:
+    instances:
+      resendEmail:
+        maxAttempts: 3
+        waitDuration: 1s
+        retryExceptions:
+          - org.springframework.mail.MailException
