--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,9 +8,9 @@ spring:
         highlight_sql: true
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://localhost:3306/testdb
+    username: root
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   liquibase:
     enabled: false
