--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -25,3 +25,5 @@ databaseChangeLog:
       file: src/main/resources/db/migration/20241108-add-indexes-product.yaml
   - include:
       file: src/main/resources/db/migration/20241109-add-additional-indexes.yaml
+  - include:
+      file: src/main/resources/db/migration/20241126-add-collection-table.yaml
