Refactor database connection and enhance user controller security
- Updated database connection settings in build.gradle to use environment variables for better security and flexibility.
- Added security requirements and role-based access control to multiple endpoints in UserController, ensuring only authorized users can access sensitive operations.
- Introduced a new endpoint for updating user profile information, allowing both ADMIN and USER roles to update their details.

These changes improve security practices and maintainability of the codebase.

--- a/build.gradle
+++ b/build.gradle
@@ -91,9 +91,9 @@ liquibase {
     activities {
         main {
             changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
-            url 'jdbc:mysql://localhost:3306/testdb'
-            username 'root'
-            password 'root'
+            url 'jdbc:' + System.getenv('DB') + '://' + System.getenv('DB_HOST') + ':' + System.getenv('DB_PORT') + '/' + System.getenv('DB_NAME')
+            username System.getenv('DB_USERNAME')
+            password System.getenv('DB_PASSWORD')
         }
     }
     runList = 'main'
