Add collection table (#223)
* Add Collection Table

* Get free pattern by email

* Refactor user authentication and comment/free pattern services

- Removed UserPrincipal dependency from CommentController and FreePatternController, simplifying method signatures.
- Updated CommentService and FreePatternService to use the current user directly from SecurityUtils instead of passing UserPrincipal.
- Introduced ProfileUserUpdateRequest for user profile updates, allowing name and image URL changes.
- Implemented user details directly in the User model, removing the UserPrincipal class.
- Adjusted JwtTokenService to use the User model for token creation.

This refactor enhances code clarity and reduces complexity in user management and service interactions.

* Refactor database connection and enhance user controller security

- Updated database connection settings in build.gradle to use environment variables for better security and flexibility.
- Added security requirements and role-based access control to multiple endpoints in UserController, ensuring only authorized users can access sensitive operations.
- Introduced a new endpoint for updating user profile information, allowing both ADMIN and USER roles to update their details.

These changes improve security practices and maintainability of the codebase.

* Refactor collection creation to accept a name parameter

- Updated the CollectionController to change the create method from accepting a CreateCollectionRequest to a simple name parameter.
- Modified the CollectionService interface and its implementation to reflect this change, ensuring that the collection is created based on the provided name.
- Enhanced method documentation to clarify the purpose and parameters of the createCollection method.

These changes simplify the collection creation process and improve code clarity.

* Add UserProfile entity and establish one-to-one relationship with User

- Introduced a new UserProfile entity to store additional user infor

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -25,3 +25,7 @@ databaseChangeLog:
       file: src/main/resources/db/migration/20241108-add-indexes-product.yaml
   - include:
       file: src/main/resources/db/migration/20241109-add-additional-indexes.yaml
+  - include:
+      file: src/main/resources/db/migration/20241126-add-collection-table.yaml
+  - include:
+      file: src/main/resources/db/migration/20241213-add-user-profile.yaml
