--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -7,16 +7,17 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to Heroku
+    name: Deploy
     runs-on: ubuntu-latest
     environment: little-crochet-prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Deploy to heroku
-        uses: akhileshns/heroku-deploy@v3.13.15
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@latest
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          install-heroku-cli: true
