--- a/.gitignore
+++ b/.gitignore
@@ -87,11 +87,7 @@ fabric.properties
 ### Intellij+all Patch ###
 # Ignore everything but code style settings and run configurations
 # that are supposed to be shared within teams.
-
 .idea/*
-
-!.idea/codeStyles
-!.idea/runConfigurations
 
 ### Java ###
 # Compiled class file
@@ -165,3 +161,6 @@ gradle-app.setting
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
+
+# Ignore environment file
+.env.*
