Refactor build configuration and enhance async task executor; update message constants for clarity; improve transaction management in service implementations

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ version = loadVersion().getVersion()
 description = 'crochet'
 
 java {
-    sourceCompatibility = '21'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 configurations {
