Switch database driver to MySQL in production config
Updated the `driver-class-name` in `application-prod.yml` to use the MySQL driver (`com.mysql.cj.jdbc.Driver`) instead of the PostgreSQL driver. This aligns the configuration with the MySQL database setup.

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -8,6 +8,6 @@ spring:
     url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   liquibase:
     enabled: false
