--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
   datasource:
     url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USERNAME}
@@ -11,3 +12,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   liquibase:
     enabled: false
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
