--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -26,7 +26,7 @@ jobs:
         uses: gradle/gradle-build-action@v3
       - name: Gradle build
         env:
-          env: dev
+          ENV: dev
           EMAIL: ${{ secrets.EMAIL }}
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
