--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -25,7 +25,7 @@ jobs:
         uses: gradle/gradle-build-action@v3
       - name: Gradle build
         env:
-          env: prod
+          ENV: prod
           EMAIL: ${{ secrets.EMAIL }}
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
