--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     implementation 'com.github.f4b6a3:tsid-creator:5.2.6'
 
+// https://mvnrepository.com/artifact/com.turkraft.springfilter/jpa
+    implementation 'com.turkraft.springfilter:jpa:3.1.9'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.3.0'
     testImplementation 'org.mockito:mockito-core:5.11.0'
