Enhance Data Integrity, Caching, and APIs; Implement Scheduled Cleanups; Refactor Queries & Docker Config (#1)
* Refactor repository and service methods to use LEFT JOINs, update PaginationMapper usage, and modify CollectionController endpoints to use PathVariable.

* Refactor repository queries to use LEFT JOINs for images and users in FreePattern, Pattern, and Product repositories

* Add profile activation configuration to application YAML files and update ObjectUtils usage in mappers

* Update deleteCollection response status to OK for successful deletion

* Implement scheduled cleanup for expired or confirmed tokens in ConfirmTokenSchedule and ConfirmTokenService

* Implement scheduled cleanup for expired refresh tokens in RefreshTokenSchedule and add deletion logic in RefreshTokenService

* Add @ResponseStatus(HttpStatus.OK) annotation to delete and get methods in controllers

* Add checkFreePatternInCollection method and endpoint to CollectionController

* Update response status for removePatternFromCollection to OK and simplify user validation logic

* Update Docker configuration to use MySQL service and optimize build stages

* Add endpoint to retrieve free patterns by collection ID and update service method to include user ID

* Refactor collection retrieval to include user ID and update endpoint in UserController

* Add no-args and all-args constructors to request classes for improved object creation

* Remove unused methods from ObjectUtils for improved code clarity and maintainability

* Implement caching for settings retrieval and add cache management methods in SettingsUtil

* Clear avatar when no patterns remain in collection to maintain data integrity

* Add null check for collection retrieval in removeFreePatternFromCollection method

---------

Co-authored-by: Phan Văn Lượm <phanvanluom97bd@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     implementation 'org.liquibase:liquibase-core:4.30.0'
     implementation 'com.h2database:h2:2.2.224'
     implementation 'org.postgresql:postgresql:42.7.4'
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
-    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
+//    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
+//    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
