--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
-version: '3'
 services:
   web:
     image: phanvanluom97bd/crochet:latest
     ports:
       - "8080:8080"
     env_file:
-      - .env
+      - .env.dev
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: testdb
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
