--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -1,25 +1,64 @@
-name: Heroku Deployment
+name: Heroku deployment
 
 on:
   push:
     branches:
       - 'master'
+  pull_request:
+    branches:
+      - 'master'
+
+env:
+  ENV: dev
+  EMAIL: ${{ env.EMAIL }}
+  DB_HOST: ${{ env.DB_HOST }}
+  DB_PORT: ${{ env.DB_PORT }}
+  DB_NAME: ${{ env.DB_NAME }}
+  DB_USERNAME: ${{ env.DB_USERNAME }}
+  DB_PASSWORD: ${{ env.DB_PASSWORD }}
+  GOOGLE_CLIENT_ID: ${{ env.GOOGLE_CLIENT_ID }}
+  GOOGLE_CLIENT_SECRET: ${{ env.GOOGLE_CLIENT_SECRET }}
+  TOKEN_SECRET: ${{ env.TOKEN_SECRET }}
+  APP_PASSWORD: ${{ env.APP_PASSWORD }}
+  SERVICE_ACCOUNT_KEY: ${{ env.SERVICE_ACCOUNT_KEY }}
+  HEROKU_API_KEY: ${{ env.HEROKU_API_KEY }}
+  HEROKU_APP: ${{ env.HEROKU_APP }}
+  HEROKU_EMAIL: ${{ env.HEROKU_EMAIL }}
 
 jobs:
-  deploy:
-    name: Deploy to Heroku
+  build:
+    name: Build
     runs-on: ubuntu-latest
     environment: little-crochet-prod
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+      - name: Gradle build
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build
 
+  deploy:
+    name: Deploy to Heroku
+    runs-on: ubuntu-latest
+    environment: little-crochet-prod
+    needs: build
+    if: github.event_name == 'push'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Install Heroku CLI
         run: curl https://cli-assets.heroku.com/install.sh | sh
-
       - name: Deploy to heroku
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP }}
-          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ env.HEROKU_API_KEY }}
+          heroku_app_name: ${{ env.HEROKU_APP }}
+          heroku_email: ${{ env.HEROKU_EMAIL }}
