Update Heroku deployment configuration; change environment from dev to prod

--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -9,7 +9,7 @@ on:
       - 'master'
 
 env:
-  ENV: dev
+  ENV: prod
   EMAIL: ${{ env.EMAIL }}
   DB_HOST: ${{ env.DB_HOST }}
   DB_PORT: ${{ env.DB_PORT }}
