--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,6 +10,7 @@ spring:
         format_sql: true
         highlight_sql: true
     generate-ddl: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
   datasource:
     url: jdbc:mysql://localhost:3306/testdb
     username: root
